--- a/html/blogpaper.html
+++ b/html/blogpaper.html
@@ -15,7 +15,11 @@
     <div class="paper">
         
     </div>
-
+<div class="demo text-center" style="margin-bottom:20px;"> 
+  <h2 class="tip" style="font-size:15px;">提示：使用滚动或拉动滚动条向下看。</h2> 
+  <div id="lists"></div>  
+  <div class="nodata"></div> 
+</div>
 </div>
 
 <!-- 通用尾部，index是当前页面的入口js -->
