--- a/html/blogpersonal.html
+++ b/html/blogpersonal.html
@@ -16,6 +16,10 @@
         <a href="blogpaper.html" class="list-group-item list-group-item-action list-group-item-success bloglist">BLOG list</a>
     </div> -->
 
+</div><div class="demo text-center" style="margin-bottom:20px;"> 
+  <h2 class="tip" style="font-size:15px;">提示：使用滚动或拉动滚动条向下看。</h2> 
+  <div id="lists"></div>  
+  <div class="nodata"></div> 
 </div>
 <!-- 通用尾部，index是当前页面的入口js -->
 <script src='common/footer.js' data-js='blogpersonal'></script>
