--- a/html/blog.html
+++ b/html/blog.html
@@ -1,5 +1,7 @@
 <!-- 通用头部，index是当前页面的入口css -->
-<script src='common/header.js' data-css='blog' data-title='Blog'></script><body>
+<script src='common/header.js' data-css='blog' data-title='Blog'></script>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<body>
 <div class="index" id="index">
      <div class="head w-100 text-center">
         <div class="head-box w-100">
@@ -21,11 +23,27 @@
 
 <!--         <div class="card">
             <button class="btn btn-light">NEXT POST</button>
-        </div> -->
+        </div> -->    
     </div>
-
-
-
+<!--     <div class="scroller text-center">
+            <div class="drop-down-refresh-layer">
+            <p class="drop-down-refresh-text">下拉加载</p>
+            <div class="drop-down-refresh-loader"></div>
+        </div>
+        <div class="scroller-content">
+          <div class="content"></div>
+          <div class="scroll-loading">加载中...</div>
+        </div>
+    </div> -->
+<div class="demo text-center" style="margin-bottom:20px;"> 
+  <h2 class="tip" style="font-size:15px;">提示：使用滚动或拉动滚动条向下看。</h2> 
+  <div id="lists"></div>  
+  <div class="nodata"></div> 
 </div>
+
+
+
+</div><script type="text/javascript" src="../js/lib/tractor.js"></script>
 <!-- 通用尾部，index是当前页面的入口js -->
 <script src='common/footer.js' data-js='blog'></script>
+
